other/resources/rabbitmq/rabbitmq-httpproxy.1.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: rabbit__TOKEN__-httpproxy
spec:
  routes:
  - conditions:
    - prefix: /
    services:
    - name: rabbitcluster2
      port: 15672
  virtualhost:
    fqdn: rabbit__TOKEN__.tanzudata.ml
