other/resources/rabbitmq/rabbitmq-httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: rabbit__TOKEN__-httpproxy
spec:
  routes:
  - conditions:
    - prefix: /
    services:
    - name: rabbitcluster1
      port: 15672
  virtualhost:
    fqdn: rabbit__TOKEN__.tanzudatatap.ml
