other/resources/rabbitmq/rabbitmq-scdf.in.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: rabbitmain-httpproxy
  namespace: default
spec:
  routes:
  - conditions:
    - prefix: /
    services:
    - name: rabbitmq
      port: 15672
  virtualhost:
    fqdn: rabbitmain.${DATA_E2E_BASE_URL}
